; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ocspapitest.c_get_cert.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ocspapitest.c_get_cert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@certstr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**)* @get_cert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_cert(i32** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32** %0, i32*** %3, align 8
  store i32* null, i32** %5, align 8
  %6 = load i32, i32* @certstr, align 4
  %7 = call i32* @BIO_new_file(i32 %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %4, align 8
  %8 = call i32 @TEST_ptr(i32* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

11:                                               ; preds = %1
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @PEM_read_bio_X509(i32* %12, i32* null, i32* null, i32* null)
  store i32* %13, i32** %5, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @BIO_free(i32* %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @TEST_ptr(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %11
  br label %23

20:                                               ; preds = %11
  %21 = load i32*, i32** %5, align 8
  %22 = load i32**, i32*** %3, align 8
  store i32* %21, i32** %22, align 8
  store i32 1, i32* %2, align 4
  br label %26

23:                                               ; preds = %19
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @X509_free(i32* %24)
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %23, %20, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @TEST_ptr(i32*) #1

declare dso_local i32* @BIO_new_file(i32, i8*) #1

declare dso_local i32* @PEM_read_bio_X509(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @X509_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
